# todo-manager

./: .gitignore  pyproject.toml
todoman/: main.py
todoman/api/: list_items_api.py  list_items_swagger.py  lists_api.py  lists_swagger.py
todoman/api/dto/: todo_list_dto.py
todoman/entities/: todo_list_entities.py
todoman/storage/: todo_list_storage.py
