[tool.poetry]
name = "todoman"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
redis = "^5.2.0"
loguru = "^0.7.2"
annotated-types = "^0.7.0"

[tool.poetry.group.dev.dependencies]
fastapi = {extras = ["standard"], version = "^0.115.5"}
ruff = "^0.7.3"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
